--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 .container {
     width: 90%;
     max-width: 1200px;
-    margin: 0 auto;
+    margin:     auto auto;
 }
 
 header {
@@ -151,7 +151,7 @@ nav a:hover:after {
     -o-transform: translateY(-3px);
 }
 
-;btn-secondary {
+.btn-secondary {
     background-color: transparent;
     color: var(--coffee-medium);
     border: 2px solid var(--coffee-medium);
@@ -187,10 +187,56 @@ nav a:hover:after {
     z-index: -1;
 }
 
-.her-content {
+.hero-content {
     width: 750px;
     animation: fadeInUp 1s ease forwards;
     color: var(--text-light);
     -webkit-animation: fadeInUp 1s ease forwards;
 }
 
+.hero .container {
+    display: flex;
+    /* margin-top: 100px; */
+}
+
+.hero-subtitle {
+    font-size: 20px;
+    color: var(--coffee-accent);
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+}
+
+.hero-subtitle::before {
+    content: '';
+    width: 50px;
+    height: 2px;
+    background: var(--coffee-gold);
+}
+
+.hero-title {
+    font-size: 58px;
+    font-weight: 900;
+    line-height: 1.1;
+    margin-bottom: 25px;
+    color: var(--text-light);
+}
+
+.hero-title span {
+    color: var(--coffee-gold);
+    position: relative;
+}
+
+.hero-text {
+    font-size: 16px;
+    margin-bottom: 120px;
+    max-width: 700px;
+}
+
+.hero-buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+}
